@@ -281,7 +281,22 @@ binary-arch: install
 	dh_strip -plibgles1-mesa --dbg-package=libgles1-mesa-dbg
 	dh_strip -plibgles2-mesa --dbg-package=libgles2-mesa-dbg
 	dh_strip -plibegl1-mesa-drivers --dbg-package=libegl1-mesa-drivers-dbg
-	dh_strip -s --remaining-packages
+	# dh_strip -s --remaining-packages doesn't work with resumed
+	# builds (see changelog for mesa 7.10-1):
+	dh_strip \
+		-plibegl1-mesa-dev \
+		-plibgl1-mesa-dev \
+		-plibgl1-mesa-swx11-dev \
+		-plibgles1-mesa-dev \
+		-plibgles2-mesa-dev \
+		-plibglu1-mesa \
+		-plibglu1-mesa-dev \
+		-plibglw1-mesa \
+		-plibglw1-mesa-dev \
+		-plibopenvg1-mesa-dev \
+		-plibosmesa6 \
+		-plibosmesa6-dev \
+		-pmesa-common-dev
 	dh_compress -s
 	dh_fixperms -s
 	dh_makeshlibs -s -- -c4
